--- a/assets/components/productPage/productPageInfoChip/productPageInfoChip.scss
+++ b/assets/components/productPage/productPageInfoChip/productPageInfoChip.scss
@@ -1,6 +1,5 @@
 .component-product-page-info-chip {
-  font-family: $gu-text-sans-web;
-  font-size: 16px;
+  @include gu-fontset-body-sans;
   svg {
     display: inline-block;
     vertical-align: text-bottom;
