--- a/assets/components/productPage/productPageButton/productPageButton.scss
+++ b/assets/components/productPage/productPageButton/productPageButton.scss
@@ -1,3 +1,5 @@
+@import '~stylesheets/gu-sass/gu-sass';
+
 .component-product-page-button {
   @include gu-fontset-body-sans;
   display: inline-flex;
