--- a/assets/components/productPage/productPageInfoChip/productPageInfoChip.scss
+++ b/assets/components/productPage/productPageInfoChip/productPageInfoChip.scss
@@ -1,3 +1,5 @@
+@import '~stylesheets/gu-sass/gu-sass';
+
 .component-product-page-info-chip {
   @include gu-fontset-body-sans;
   .svg-information {
