--- a/assets/components/productPage/productPageTabs/productPageTabs.scss
+++ b/assets/components/productPage/productPageTabs/productPageTabs.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   align-items: flex-end;
   justify-content: flex-start;
+  margin-left: -1px;
 }
 
 .component-product-page-tabs__tab {
