--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -1,5 +1,19 @@
 @import '~stylesheets/gu-sass/gu-sass';
 
+@mixin with-border($selector, $colour) {
+  #{$selector} .component-left-margin-section__content,
+  #{$selector} .component-product-page-features .component-product-page-features__item {
+    border-color: $colour;
+  }
+  /*div > $selector adds some leeway for react wrapping elements*/
+  #{$selector} + #{$selector},
+  #{$selector} + div > #{$selector}  {
+    .component-left-margin-section__content {
+      border-top: 1px solid $colour;
+    }
+  }  
+}
+
 .component-product-page-content-block .component-left-margin-section__content {
   max-width: 100%;
   @include mq($from: tablet) {
@@ -7,19 +21,9 @@
   }
 }
 
-.component-product-page-content-block--white + .component-product-page-content-block--white {
-  .component-left-margin-section__content {
-    border-top: 1px solid gu-colour(garnett-neutral-4);
-  }
-}
-
 .component-product-page-content-block--grey {
   &, .component-product-page-content-block__bg {
     background-color: gu-colour(garnett-neutral-3);
-  }
-  .component-left-margin-section__content {
-    border-left: 0;
-    margin-left: -1px;
   }
 }
 
@@ -28,17 +32,6 @@
   &, .component-product-page-content-block__bg {
     background-color: gu-colour(header-dark);
   }
-  .component-left-margin-section__content {
-    border-color: gu-colour(header-border);
-  }
-  .component-product-page-features .component-product-page-features__item {
-    border-color: gu-colour(garnett-neutral-5);
-  }
-}
-.component-product-page-content-block--feature + .component-product-page-content-block--feature {
-  .component-left-margin-section__content {
-    border-top: 1px solid gu-colour(header-border);
-  }
 }
 
 .component-product-page-content-block--dark {
@@ -46,10 +39,26 @@
   &, .component-product-page-content-block__bg {
     background-color: gu-colour(garnett-neutral-7);
   }
-  .component-left-margin-section__content {
-    border-color: gu-colour(garnett-neutral-5);
-  }
 }
+
+@include with-border(
+  $selector: ".component-product-page-content-block--grey", 
+  $colour: gu-colour(garnett-neutral-4)
+);
+@include with-border(
+  $selector: ".component-product-page-content-block--white", 
+  $colour: gu-colour(garnett-neutral-4)
+);
+@include with-border(
+  $selector: ".component-product-page-content-block--feature", 
+  $colour: gu-colour(header-border)
+);
+@include with-border(
+  $selector: ".component-product-page-content-block--dark", 
+  $colour: gu-colour(garnett-neutral-5)
+);
+
+
 
 .component-product-page-content-block__content {
   max-width: gu-span(12);
