--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -8,7 +8,6 @@
 @import '~components/errorMessage/errorMessage';
 @import '~components/ctaLink/ctaLink';
 @import '~components/generalErrorMessage/generalErrorMessage';
-@import 'components/SetPassword/setPassword';
 
 body {
   min-height: 100vh;
@@ -995,9 +994,11 @@ form {
   width: 100%;
   background: gu-colour(news-garnett-highlight);
   border: none;
-  border-radius: 20px;
-  padding: 9px 20px;
+  border-radius: 600px;
   position: relative;
+  padding: 0 $gu-h-spacing;
+  line-height: $cta-height;
+  text-align: left;
 
   &:enabled {
     cursor: pointer;
@@ -1009,19 +1010,13 @@ form {
   }
 }
 
-.form__submit-button__inner {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .form__submit-button--hidden {
   display: none;
 }
 
 .form__submit-button .svg-arrow-right-straight {
   height: 16px;
+  position: absolute;
   vertical-align: middle;
   left: calc(100% - 34px);
   top: 14px;
@@ -1049,6 +1044,7 @@ form {
 
 .component-password-failure-message {
   padding: 0 $gu-h-spacing $gu-v-spacing;
+  margin-top: $gu-v-spacing;
 }
 
 .component-contributions-survey {
