--- a/assets/components/productPage/productPagePlanForm/productPagePlanFormLabel.scss
+++ b/assets/components/productPage/productPagePlanForm/productPagePlanFormLabel.scss
@@ -13,7 +13,6 @@
 .component-product-page-plan-form-label__box {
   @include gu-fontset-body-sans;
   background: gu-colour(garnett-neutral-5);
-  border: 1px solid gu-colour(garnett-neutral-2);
   color: gu-colour(garnett-neutral-1);
   display: block;
   height: 100%;
@@ -24,14 +23,14 @@
 
 .component-product-page-plan-form-label__title,
 .component-product-page-plan-form-label__copy {
-  padding: $gu-v-spacing/2 $gu-h-spacing/2;
   display: block;
 }
 
 .component-product-page-plan-form-label__title {
   @include gu-fontset-heading-sans;
+  padding: $gu-v-spacing/3 $gu-h-spacing/2 $gu-v-spacing/4;
+  background-color: gu-colour(garnett-neutral-4);
   position: relative;
-  border-bottom: 1px solid gu-colour(garnett-neutral-2);
 }
 
 .component-product-page-plan-form-label__offer {
@@ -45,15 +44,15 @@
 }
 
 .component-product-page-plan-form-label__copy {
-  padding-bottom: $gu-v-spacing;
+  padding: $gu-v-spacing/2 $gu-h-spacing/2 $gu-v-spacing/1.5;  
 }
 
 .component-product-page-plan-form-label__check {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: $gu-v-spacing * 2.3;
-  height: $gu-v-spacing * 2.3;
+  width: $gu-v-spacing * 2;
+  height: $gu-v-spacing * 2;
   border-radius: 100%;
   background: gu-colour(garnett-neutral-1);
   position: absolute;
@@ -75,10 +74,26 @@
 }
 
 .component-product-page-plan-form-label__input:checked + .component-product-page-plan-form-label__box {
-  background: gu-colour(news-garnett-highlight);
-  border-color: rgba(0,0,0,.3);
+  .component-product-page-plan-form-label__title {
+    background: gu-colour(news-garnett-highlight);
+  }
   .component-product-page-plan-form-label__check {
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+.component-product-page-plan-form-label__footer {
+  border-top: 1px solid gu-colour(garnett-neutral-4);
+  margin-top: $gu-h-spacing /2;
+  padding-top: $gu-h-spacing /2;
+}
+
+.component-product-page-plan-form-label__price {
+  @include gu-fontset-heading-sans($size-only: true);
+  font-weight: bold;
+}
+
+.component-product-page-plan-form-label__saving { 
+  font-style: italic;
 }
