pass down paper prices

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,6 +11,7 @@
 	hrefLangLinks: Map[String, String] = Map(),
 	styles: Html = Html(""),
 	scripts: Html = Html(""),
+  data: Map[String, String] = Map.empty,
   csrf: Option[String] = None
 )(implicit assets: AssetsResolver, request: RequestHeader, settings: Settings)
 
@@ -94,7 +95,9 @@
     </div>
   </noscript>
 
-	<div id="@mainId"></div>
+	<div id="@mainId"
+    @{data.map{case (key, value) => s"""data-$key=$value """}}
+  ></div>
 
 	<script src="https://polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.find,fetch,Array.prototype.includes,Number.isInteger,Object.values,Object.entries"></script>
 	<script defer id="stripe-js" src="https://js.stripe.com/v3/"></script>
