--- a/assets/components/productPage/productPagePlanForm/productPagePlanFormLabel.scss
+++ b/assets/components/productPage/productPagePlanForm/productPagePlanFormLabel.scss
@@ -19,10 +19,14 @@
   cursor: pointer;
   transition: .2s;
   will-change: background-color box-shadow;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: stretch;
 }
 
 .component-product-page-plan-form-label__title,
-.component-product-page-plan-form-label__copy {
+.component-product-page-plan-form-label__content {
   display: block;
 }
 
@@ -43,7 +47,8 @@
   line-height: 1.4;
 }
 
-.component-product-page-plan-form-label__copy {
+.component-product-page-plan-form-label__content {
+  flex: 1 1 auto;
   padding: $gu-v-spacing/2 $gu-h-spacing/2 $gu-v-spacing/1.5;  
 }
 
@@ -85,8 +90,9 @@
 
 .component-product-page-plan-form-label__footer {
   border-top: 1px solid gu-colour(garnett-neutral-4);
-  margin-top: $gu-h-spacing /2;
-  padding-top: $gu-h-spacing /2;
+  margin: $gu-v-spacing/2 $gu-h-spacing/2 0;
+  padding-top: $gu-v-spacing/2;
+  padding-bottom: $gu-v-spacing/3;
 }
 
 .component-product-page-plan-form-label__price {
