--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -8,7 +8,6 @@
 @import '~components/errorMessage/errorMessage';
 @import '~components/ctaLink/ctaLink';
 @import '~components/generalErrorMessage/generalErrorMessage';
-@import 'components/SetPassword/setPassword';
 
 body {
   min-height: 100vh;
@@ -790,28 +789,9 @@ form {
   padding-bottom: 30px;
 }
 
-.form__submit-button {
-  width: 100%;
+.form__submit-button.button {
   background: gu-colour(news-garnett-highlight);
-  border: none;
-  border-radius: 20px;
-  padding: 9px 20px;
-
-  &:enabled {
-    cursor: pointer;
-
-    &:hover,
-    &:focus {
-      filter: brightness(90%);
-    }
-  }
-}
-
-.form__submit-button__inner {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: space-between;
+  border: 1px solid gu-colour(news-garnett-highlight);
 }
 
 .form__submit-button--hidden {
@@ -891,7 +871,6 @@ form {
   fill: inherit;
 }
 
-
 /*= THANK YOU PAGE */
 
 .hidden {
@@ -934,6 +913,14 @@ form {
   margin-bottom: 0;
 }
 
+.set-password__form {
+ padding-bottom: 30px;
+}
+
+.form__submit.form__submit--create-account {
+  padding-bottom: $gu-h-spacing;
+}
+
 .marketing-permissions__title, .set-password__title {
   font-family: $gu-text-egyptian-web;
   letter-spacing: -0.5px;
@@ -954,15 +941,10 @@ form {
   font-size: 12px;
 }
 
-.component-cta-link--backtothegu {
-  font-size: 16px;
-}
-
 .button {
   align-items: center;
   border: 1px solid currentColor;
   border-radius: $gu-v-spacing * 2;
-  display: inline-flex;
   font-family: $gu-text-sans-web;
   height: $gu-v-spacing * 3.5;
   line-height: 1;
@@ -992,15 +974,25 @@ form {
   margin-right: 10px;
 }
 
-.button--wob {
-  background: gu-colour(garnett-neutral-1);
-  color: gu-colour(garnett-neutral-5);
-}
+.button--right-arrow {
+  width: 100%;
+  position: relative;
+  padding: 0 $gu-h-spacing;
+  text-align: left;
+  &:enabled {
+    cursor: pointer;
+    &:hover,
+    &:focus {
+      filter: brightness(90%);
+    }
+  }
 
-.button .svg-arrow-right-straight {
-  width: 20px;
-  height: 18px;
-  fill: gu-colour(garnett-neutral-5);
+  .svg-arrow-right-straight {
+    height: 16px;
+    position: absolute;
+    left: calc(100% - 34px);
+    top: 14px;
+  }
 }
 
 .svg-subscribe, .svg-lock {
@@ -1040,6 +1032,7 @@ form {
 
 .component-password-failure-message {
   padding: 0 $gu-h-spacing $gu-v-spacing;
+  margin-top: $gu-v-spacing;
 }
 
 .component-contributions-survey {
