--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -11,6 +11,7 @@
 @import '~components/footer/footer';
 @import '~components/headers/simpleHeader/simpleHeader';
 @import '~components/leftMarginSection/leftMarginSection';
+@import '~components/checkoutHeading/checkoutHeading';
 @import '~components/customerService/customerService';
 @import '~components/subscriptionFaq/subscriptionFaq';
 @import '~components/legal/subscriptionTermsPrivacy/subscriptionTermsPrivacy';
