--- a/assets/components/footer/footer.scss
+++ b/assets/components/footer/footer.scss
@@ -5,12 +5,16 @@
   line-height: 16px;
   padding: $gu-v-spacing 0;
 
-  .component-contrib-legal {
-    margin-top: $gu-v-spacing;
+  .component-contrib-legal, .component-terms-privacy {
+    //margin-top: $gu-v-spacing;
     font-weight: 400;
     display: block;
     padding: 3px 0;
     color: gu-colour(neutral-4);
+
+    a {
+      color: gu-colour(garnett-neutral-5);
+    }
   }
 }
 
