--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -562,6 +562,17 @@ header[role="banner"] {
   flex-direction: column;
 }
 
+.form--contribution .component-terms-privacy {
+  margin-bottom: 30px;
+  font-size: 12px;
+  line-height: 16px;
+  color: gu-colour(garnett-neutral-2);
+
+  a {
+    color: gu-colour(neutral-2);
+  }
+}
+
 /*= TYPOGRAPHY */
 
 form {
@@ -787,7 +798,7 @@ form {
 
 .form__submit {
   margin-top: 24px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 .form__submit-button {
