--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -50,8 +50,22 @@
   .checkout-content {
     .component-left-margin-section__content {
       box-sizing: border-box;
-      border-left: 1px solid gu-colour(garnett-neutral-3);
+      border-left: 1px solid gu-colour(garnett-neutral-4);
     }
+  }
+
+  .checkout-form {
+    .component-left-margin-section__content {
+      padding-left: $gu-h-spacing / 2;
+      padding-bottom: $gu-v-spacing * 3;
+      border-top: 1px solid gu-colour(garnett-neutral-4);
+    }
+  }
+
+  .checkout-form__heading {
+    @include gu-fontset-body-large;
+
+    margin-bottom: $gu-v-spacing;
   }
 
   .component-left-margin-section--free-trial {
@@ -65,30 +79,19 @@
     font-style: italic;
     font-weight: 300;
     padding-left: $gu-h-spacing / 2;
-    margin-bottom: $gu-v-spacing;
+    margin-bottom: $gu-v-spacing * 2;
 
     @include mq($from: mobileLandscape) {
       width: 460px;
     }
   }
 
-  .checkout-form {
-    .component-left-margin-section__content {
-      padding-left: $gu-h-spacing / 2;
-    }
-  }
-
-  .checkout-form__heading {
-    @include gu-fontset-body-large;
-    margin-top: 2px;
-  }
-
   .component-left-margin-section--your-details {
     .component-left-margin-section__content {
-      background-color: gu-colour(garnett-neutral-3);
-      padding-bottom: $gu-v-spacing * 3;
+      border-top: none;
     }
   }
+ 
 
   // ----- Thank You
 
