--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -20,6 +20,7 @@
 @import '~components/productHero/productHero';
 @import '~components/forms/standardFields/input';
 @import '~components/forms/standardFields/select';
+@import '~components/forms/standardFields/button';
 @import '~components/forms/customFields/radioInput';
 @import '~components/forms/formHOCs/withLabel';
 @import '~components/forms/formHOCs/withError';
