--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -12,6 +12,7 @@
 @import '~components/headers/simpleHeader/simpleHeader';
 @import '~components/leftMarginSection/leftMarginSection';
 @import '~components/checkoutHeading/checkoutHeading';
+@import '~components/checkoutCopy/checkoutCopy';
 @import '~components/customerService/customerService';
 @import '~components/subscriptionFaq/subscriptionFaq';
 @import '~components/legal/subscriptionTermsPrivacy/subscriptionTermsPrivacy';
