set the copy based on the INTCMP query param

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -210,6 +210,11 @@ body {
   padding: 0 $gu-h-spacing/2 $gu-v-spacing*1.5 $gu-h-spacing/2;
 }
 
+.header__us-campaign {
+  font-size: 27px;
+  border-bottom: none;
+}
+
 input,
 select,
 textarea,
