--- a/assets/components/forms/customFields/radioInput.scss
+++ b/assets/components/forms/customFields/radioInput.scss
@@ -7,7 +7,7 @@
   position: relative;
 
   &:hover {
-    .component-radio-input__text:before {
+    .component-radio-input__text::before {
       border-color: gu-colour(garnett-neutral-2);
     }
   }
@@ -26,7 +26,7 @@
   left: 0;
 }
 
-.component-radio-input__text:before {
+.component-radio-input__text::before {
   display: inline-block;
   vertical-align: top;
   content: '';
@@ -38,7 +38,7 @@
   margin-right: 5px;
 }
 
-.component-radio-input__input:checked + .component-radio-input__text:before {
+.component-radio-input__input:checked + .component-radio-input__text::before {
   background-color: gu-colour(green-dark);
   border-color: gu-colour(green-dark);
 }
