--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -77,7 +77,7 @@
     }
   }
 
-  .free-trial__copy {
+  .checkout-content__free-trial {
     @include gu-fontset-body-large;
     font-style: italic;
     font-weight: 300;
@@ -94,7 +94,7 @@
       border-top: none;
     }
   }
- 
+
 
   // ----- Thank You
 
