--- a/assets/components/checkoutHeading/checkoutHeading.scss
+++ b/assets/components/checkoutHeading/checkoutHeading.scss
@@ -11,10 +11,10 @@
 .component-checkout-heading__heading {
   @include gu-fontset-heading-large;
   margin-bottom: $gu-v-spacing * 3;
-  width: 300px;
+  width: gu-span(4);
 
   @include mq($from: tablet) {
-    width: 500px;
+    width: gu-span(6);
   }
 }
 
