Rolling out countdown timer for Digital Pack & Featured product
Following an A/B test that confirmed a positive impact of introducing a countdown timer, we are rolling out the countdown timer as default for the Digital product page, as well as for the featured product header for Digital Pack (US, AU, RoW only).

--- a/assets/components/flashSaleCountdown/flashSaleCountdown.scss
+++ b/assets/components/flashSaleCountdown/flashSaleCountdown.scss
@@ -1,5 +1,5 @@
 .component-flash-sale-countdown {
-  font-size: 14px;
+  font-size: 1em;
   line-height: 16px;
   font-family: $gu-text-egyptian-web;
   overflow: hidden;
