--- a/assets/components/flashSaleCountdown/flashSaleCountdown.scss
+++ b/assets/components/flashSaleCountdown/flashSaleCountdown.scss
@@ -1,5 +1,5 @@
 .component-flash-sale-countdown {
-  font-size: 1em;
+  font-size: 17px;
   line-height: 16px;
   font-family: $gu-text-egyptian-web;
   overflow: hidden;
