us ticker stateful component on desktop

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -190,41 +190,61 @@ footer[role="contentinfo"] a {
 
 /*= US TICKER */
 
-.contributions__contributions-landing--with-ticker {
-  .contributions__buttons {
-    margin-bottom: 25px;
-  }
-}
+$progess-bar-height: 10px;
+
 .contributions-landing-ticker {
-  position: relative;
-  height: 70px;
-  margin-bottom: 25px;
+  @include mq($until: tablet) {
+    display: none;
+  }
+
+  display: flex;
+  flex-direction: column;
 }
-.contributions-landing-ticker__count {
- // @include fs-header(5);
-  font: $gu-titlepiece;
+
+.contributions-landing-ticker__values {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.contributions-landing-ticker__goal, .contributions-landing-ticker__so-far {
+  display: flex;
+  flex-direction: column;
+}
+
+.contributions-landing-ticker__so-far .contributions-landing-ticker__count {
+  font-family: $gu-titlepiece;
   font-size: 32px;
   font-weight: 800;
-  color: #333333;
+  color: gu-colour(opinion-garnett-media-main-1);
 }
-.contributions-landing-ticker__count-label {
-  font-size: 17px;
-  line-height: 1.4;
+
+.contributions-landing-ticker__goal {
+  align-items: end;
+
+  .contributions-landing-ticker__count {
+    font-weight: bold;
+  }
 }
-$progess-bar-height: 10px;
+
+.contributions-landing-ticker__label {
+  font-style: italic;
+}
+
+.contributions-landing-ticker__progress-bar {
+  position: relative;
+}
+
 .contributions-landing-ticker__progress {
-  width: 100%;
-  //TODO progress bar height
-  height: 10px;
-  border-radius: 5px;
+  width: calc(100%);
+  height: $progess-bar-height;
   overflow: hidden;
   background-color: #dcdcdc;
   position: absolute;
-  bottom: 0;
-  margin-top: 40px;
 }
+
 .contributions-landing-ticker__filled-progress {
-  background-color: gu-colour(news-garnett-highlight);
+  background-color: gu-colour(opinion-garnett-media-main-1);
   position: absolute;
   top: 0;
   left: 0;
@@ -233,37 +253,11 @@ $progess-bar-height: 10px;
   transform: translateX(-100%);
   transition: transform 3s cubic-bezier(.25, .55, .2, .85);
 }
-.contributions-landing-ticker__progress-labels {
-  position: relative;
-  width: 100%;
-  height: 16px;
-}
-.contributions-landing-ticker__label {
-  //@include fs-textSans(4);
-  //color: #676767;
-  color: gu-colour(garnett-neutral-2);
-  position: absolute;
-  top: 5px;
-}
-.contributions-landing-ticker__goal {
-  position: absolute;
-  right: 0;
-  //bottom: $progess-bar-height + 5px;
-  text-align: right;
-}
-.contributions-landing-ticker__so-far {
-  position: absolute;
-  left: 0;
- // bottom: $progess-bar-height + 5px;
-}
-.contributions-landing-ticker__caption {
-  //@include fs-textSans(4);
-  position: absolute;
-  bottom: 6px;
-  left: 10px;
-  right: 10px;
-  color: #ffffff;
-  opacity: .7;
+
+.contributions-landing-ticker__border {
+  border-bottom: 1px solid gu-colour(garnett-neutral-4);
+  margin: 0 -10px;
+  padding: $gu-v-spacing 0;
 }
 
 /*= CONTENT */
