--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -32,14 +32,13 @@
 .component-product-page-content-block .component-left-margin-section__content {
   max-width: 100%;
   position: relative;
-  overflow: hidden;
   @include mq($from: tablet) {
     border-left: 1px solid gu-colour(garnett-neutral-4);
   }
 }
 
-.component-product-page-content-block--allow-overflow .component-left-margin-section__content {
-  overflow: visible;
+.component-product-page-content-block--overflow-hidden .component-left-margin-section__content {
+  overflow: hidden;
 }
 
 .component-product-page-content-block--white {
@@ -74,7 +73,6 @@
 .component-product-page-content-block__content {
   max-width: gu-span(12);
   padding: ($gu-v-spacing/2) ($gu-h-spacing / 2) 0;
-  position: relative;
 }
 
 .component-product-page-content-block-outset {
@@ -105,6 +103,9 @@
   }
   .component-product-page-text-block--heading-only + .component-product-page-content-block-divider {
     margin-top: ($gu-v-spacing*-1)
+  }
+  .component-product-page-content-block__content > .component-product-page-content-block-divider:first-child {
+    margin-top: ($gu-v-spacing*-.5)-1px;
   }
 }
 
