--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -105,7 +105,10 @@
     margin-top: ($gu-v-spacing*-1)
   }
   .component-product-page-content-block__content > .component-product-page-content-block-divider:first-child {
-    margin-top: ($gu-v-spacing*-.5)-1px;
+    margin-top: ($gu-v-spacing*-.5) - 1px;
+    /*cancel out padding if this is the first child then
+    overlap under the top border to avoid the first multiline
+    merging with it and looking as a 2px border */
   }
 }
 
