show white space if no values are fetched

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -192,6 +192,10 @@ footer[role="contentinfo"] a {
 
 $progess-bar-height: 10px;
 
+.contributions-landing-ticker--hidden {
+  visibility: hidden;
+}
+
 .contributions-landing-ticker {
   @include mq($until: tablet) {
     display: none;
